--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-- v6.0a (raw) SNAPSHOT v0.6
-🟢 - WIP
-🟢 - WIP
-🟢 - WIP
+= ======= ==# ##(  v6.0a (raw) SNAPSHOT v9.05  )## #== ======= =
+➕ Новые характеристики в режиме резня (WIP)
+      1) Мана
+      2) Регенерация маны
+      3) Кража маны
+      4) Удача
+      5) Радиус подбора опыта
+      p.s. они все появляются в карточках, но не имеют никаких эффектов, кроме последнего (L UPDATE)
