--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-= ======= ==# ##(  v6.0a (raw) SNAPSHOT v9.05  )## #== ======= =
+-------=======[###]__ v6.0a (raw) SNAPSHOT v9.05 __[###]=======-------
 ➕ Новые характеристики в режиме резня (WIP)
       1) Мана
       2) Регенерация маны
